--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.schoolwork.cryptomarketstats">
+    package="com.floridapoly.alex.cryptocurrency">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:enabled="true"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.APP_MARKET" />
+                <action android:name="android.intent.action.VIEW" />
+                <data
+                    android:host="min-api.cryptocompare.com"
+                    android:pathPrefix="/data"
+                    android:scheme="https" />
+            </intent-filter>
         </activity>
+        <activity
+            android:name=".PopWindow"
+            android:theme="@style/AppTheme.customTheme" />
+
+        <service
+            android:name=".service.CryptoCompareServiceDisplay"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".service.CryptoTimestampCallback"
+            android:enabled="true"
+            android:exported="true" />
     </application>
 
 </manifest>
